src/objects/SPE2_SurveyTracker__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Trackers</relationshipLabel>
        <relationshipName>Survey_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfExecution__c</fullName>
        <label>Survey Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewExecution__c</fullName>
        <formula>DateOfExecution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewExecution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Date__c</fullName>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewOfSurvey__c</fullName>
        <label>ReviewOfSurvey</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SendSurveyLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyLinkUpdate__c</fullName>
        <formula>LastModifiedDate - 0.040277</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Link Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <formula>Survey_Execution_Date__c  -  Survey__r.SurveyReminderBeforeExecutionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Execution_Date__c</fullName>
        <formula>NewExecution__c + Survey__r.Survey_Shut_Down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey ShutDown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>Survey Trackers</relationshipLabel>
        <relationshipName>Survey_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SystemTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>System Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isContainsSurveyBasedPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContainsSurveyBasedPI</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Tracker</label>
    <nameField>
        <label>Survey Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>